--- a/til/2017-03-13-java-and-oracle/index.html
+++ b/til/2017-03-13-java-and-oracle/index.html
@@ -241,16 +241,16 @@ Source: [EXTRACT](https://docs.oracle.com/cd/B19306_01/server.102/b14200/functio
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-10-22-fswatch/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Execute python file on change fswatch</span>
+            <a href="https://kiru.io/til/2019-05-17-pipe-linux/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Shortcut for linux pipe</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-29-uri/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Is URI case sensitive?</span>
+            <a href="https://kiru.io/til/2019-11-05-simulate-network-control/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Simulate network control</span>
             </a>
         </div>
     </div>
