--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide mx-auto text-center pb-3">
-<div class="text-xs">19 / 25 days</div>
+<div class="text-xs">20 / 25 days</div>
 <span id="progressbar" class="text-xs ">
-  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜
+  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜
 </span>
 
 </div>
@@ -254,6 +254,7 @@
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#day20">Day 20: Focus Marketing</a> </li>
   <li> <a href="#day19">Day 19: Production ready!</a> </li>
   <li> <a href="#day18">Day 18: Production ready?</a> </li>
   <li> <a href="#day17">Day 17: Production</a> </li>
@@ -286,9 +287,55 @@
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day20">Day 20: Focus Marketing</div>
+<p>Today I distributed the project link to a few friends, and got some feedback back. All of them are techies though and not
+my real target audience. I noted the feedback, but will wait to see what actual users say.</p>
+<p>The current project which is online, is usable, but I have to dogfeed it a bit.
+For the rest of the week, I will focus on putting the project on various platforms.</p>
+<p>This is my plan for the last few days:</p>
+<ul>
+<li>Getting feedback from other users</li>
+<li>Today:
+<ul>
+<li>Add attribution for the icons (forgot that)</li>
+<li>Publish on reddit: <a href="https://www.reddit.com/r/teachingresources/comments/rkm4wt/flashdictationcom_make_dictations_online/">Flashdictation.com: Make Dictations Online</a></li>
+<li>Publish on IH: <a href="https://www.indiehackers.com/post/show-ih-flashdictation-330d9c84b4">Show IH: Flashdictation</a></li>
+<li>Prepare some screenshots to publish online</li>
+</ul>
+</li>
+<li>21.12.2021
+<ul>
+<li>Add on IH as product</li>
+<li>Add chat-bot Integration? (I like them, an easy way to contact)</li>
+<li>Add on Supabase</li>
+</ul>
+</li>
+<li>22.12.2021
+<ul>
+<li>Prepare a short video (try Remotion?)?</li>
+</ul>
+</li>
+<li>23.12.2021
+<ul>
+<li>Publish on Product Hunt and ask for retweet</li>
+</ul>
+</li>
+<li>24.12.2021
+<ul>
+<li>Cleanup and analyze traffic until now</li>
+</ul>
+</li>
+<li>25.12.2021
+<ul>
+<li>Review</li>
+<li>How much time did I spent in total</li>
+<li>How much money did it cost? What is the break even?</li>
+</ul>
+</li>
+</ul>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day19">Day 19: Production ready!</div>
-<p>Today was the longest I worked for on this project at once. I wanted to finish almost all tasks which needed to be done
-before going Live. I don&rsquo;t know where to start, there were too many changes. Among the major tasks, here are some:</p>
+<p>Today was the longest I worked on this project at once. I wanted to finish almost all tasks which needed to be done
+before going Live. I don&rsquo;t know where to start, there were too many changes. Among the major tasks are these:</p>
 <p><strong>Added pricing to the landing page:</strong></p>
 <img src="/images/day19-pricing.png" alt="Pricing" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
 <p><strong>Added Stripe integration:</strong></p>
