--- a/til/2019-10-22-fswatch/index.html
+++ b/til/2019-10-22-fswatch/index.html
@@ -242,8 +242,8 @@ fswatch -0 file.py | xargs -0 -I {} command Explanation:
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-12-07-new-javascript-features/" class="hover:underline">
-                <span class="text-blue-700 font-bold">JavaScript Function string</span>
+            <a href="https://kiru.io/til/2017-03-30-bash-shortcuts/" class="hover:underline">
+                <span class="text-blue-700 font-bold">BASH Shortcuts I was not not aware of</span>
             </a>
         </div>
     </div>
@@ -258,8 +258,8 @@ fswatch -0 file.py | xargs -0 -I {} command Explanation:
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-13-java-and-oracle/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Java Enum and extract in SQL</span>
+            <a href="https://kiru.io/til/2019-11-05-simulate-network-control/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Simulate network control</span>
             </a>
         </div>
     </div>
