--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide mx-auto text-center pb-3">
-<div class="text-xs">21 / 25 days</div>
+<div class="text-xs">22 / 25 days</div>
 <span id="progressbar" class="text-xs ">
-  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜
+  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜
 </span>
 
 </div>
@@ -254,6 +254,7 @@
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#day22">Day 22: Break</a> </li>
   <li> <a href="#day21">Day 21: HackerNews and IH entry</a> </li>
   <li> <a href="#day20">Day 20: Focus Marketing</a> </li>
   <li> <a href="#day19">Day 19: Production ready!</a> </li>
@@ -288,6 +289,8 @@
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day22">Day 22: Break</div>
+<p>Today I took the day off.</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day21">Day 21: HackerNews and IH entry</div>
 I didn't have time to add the attribution for the icons. Fixed that today.
 <p>Also published the project on <a href="https://github.com/supabase/supabase/discussions/4614">Supabase</a> and IH as product.</p>
