--- a/til/2019-11-05-simulate-network-control/index.html
+++ b/til/2019-11-05-simulate-network-control/index.html
@@ -233,16 +233,16 @@ dropping.</p>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-12-06-java-comment-code/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Java code comments</span>
+            <a href="https://kiru.io/til/" class="hover:underline">
+                <span class="text-blue-700 font-bold"></span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-13-java-and-oracle/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Java Enum and extract in SQL</span>
+            <a href="https://kiru.io/til/2020-06-28-multiselect/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Empty multiselect is not set</span>
             </a>
         </div>
     </div>
