--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide mx-auto text-center pb-3">
-<div class="text-xs">22 / 25 days</div>
+<div class="text-xs">23 / 25 days</div>
 <span id="progressbar" class="text-xs ">
-  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜
+  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜
 </span>
 
 </div>
@@ -254,6 +254,7 @@
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#day23">Day 23: Tiny video </a> </li>
   <li> <a href="#day22">Day 22: Break</a> </li>
   <li> <a href="#day21">Day 21: HackerNews and IH entry</a> </li>
   <li> <a href="#day20">Day 20: Focus Marketing</a> </li>
@@ -288,6 +289,18 @@
     </ul>
   </li>
 </ul>
+</div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day23">Day 23: Tiny video </div>
+<p>I wanted to create a short video - but I am not very skilled in editing videos. I tried to use veed.io, but
+it was too cumbersome (just for me, took me too much time as I needed). I decide to try <a href="https://www.remotion.dev/">Remotion</a>.
+It was on my bucket list for a long time, but never found time. This was the motivation I needed to try it out.</p>
+<p>The library was surprisingly easy to use. It makes editing videos as fun as programming. I still struggle to wrap around
+the concepts (e.g. Sequence / Composition / Still ), but it&rsquo;s quite fun to debug a &ldquo;video&rdquo;.</p>
+<p>Anyways, here is the video I tweeted:</p>
+<div class="flex justify-center">
+<div>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">👋👋<br><br>Checkout my latest project: <a href="https://t.co/8dPSscYr1v">https://t.co/8dPSscYr1v</a> ! 🚀🚀<br><br>A dicatation tool for teachers and language learner🤓! Just the beginning - more feature will come! <br><br>Developed in 23 days. Documented on <a href="https://t.co/OcGcC0jxjZ">https://t.co/OcGcC0jxjZ</a> 💪<br><br>btw, RT is very much appreciated 🙏 <a href="https://t.co/DTNlM9pjQZ">pic.twitter.com/DTNlM9pjQZ</a></p>&mdash; Kiru (@kiru_io) <a href="https://twitter.com/kiru_io/status/1474107323371114496?ref_src=twsrc%5Etfw">December 23, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+</div>
 </div>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day22">Day 22: Break</div>
 <p>Today I took the day off.</p>
