--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="text-sm font-mono tracking-wide mx-auto text-center pb-3">
 <div class="text-xs">24 / 25 days</div>
 <span id="progressbar" class="text-xs ">
-  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜
+  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜
 </span>
 
 </div>
@@ -254,7 +254,8 @@
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
-  <li> <a href="#day23">Day 23: Tiny video </a> </li>
+  <li> <a href="#day24">Day 24: ProductHunt Launch</a> </li>
+  <li> <a href="#day23">Day 23: Tiny video</a> </li>
   <li> <a href="#day22">Day 22: Break</a> </li>
   <li> <a href="#day21">Day 21: HackerNews and IH entry</a> </li>
   <li> <a href="#day20">Day 20: Focus Marketing</a> </li>
@@ -290,6 +291,22 @@
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day24">Day 24: ProductHunt Launch</div>
+<p>Many people in my bubble (aka Twitter, and the news I read) see ProductHunt (PH) launch as the holy grail.
+<a href="https://www.producthunt.com/posts/flashdictation">Therefore I waited a while to put it on ProductHunt</a>:</p>
+<img src="/images/day24-producthunt.png" alt="ProductHunt Launch" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
+<p>Tbh, choosing the 24th of December to launch the project on PH was not my wisest move. On the other hand, my target
+audience is not on ProductHunt. I just hope it will help to rank the page a bit higher on Google (aka generate some
+backlinks).</p>
+<p>Apart from that, I re-read everything I wrote until now and corrected some mistakes.
+<a href="https://github.com/kiru/kiru.github.io/commit/ca825092d2108add8d6d38a0877a578cb7d239a0#diff-b93850b31b9c45f4c7e038296bbe985ed936dceb5bccb3b14cde667845942781">You can see the diff here</a>.</p>
+<p>For the next time, a few lessons I already learned regarding writing:</p>
+<ul>
+<li>Read what I wrote the day before and correct. I don&rsquo;t see the mistakes immediately, the next day I can check If I understood what I wrote.</li>
+<li>Pass everything through Grammerly to catch all typos.</li>
+<li>Put more images. Start adding screenshots from the beginning. (Link to flashdictation.com changes each time 🤦‍‍️)</li>
+<li>Spent more time on writing than coding. Maybe write before you code and then re-view what you wrote?</li>
+</ul>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day23">Day 23: Tiny video </div>
 <p>I wanted to create a short video - but I am not very skilled in editing videos. I tried to use veed.io, but
 it was too cumbersome (just for me, took me too much time). I decide to try <a href="https://www.remotion.dev/">Remotion</a>.
