--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide mx-auto text-center pb-3">
-<div class="text-xs">24 / 25 days</div>
+<div class="text-xs">25 / 25 days</div>
 <span id="progressbar" class="text-xs ">
-  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜
+  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩
 </span>
 
 </div>
@@ -254,6 +254,7 @@
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#day25">Day 25: Summary and Outlook</a></li>
   <li> <a href="#day24">Day 24: ProductHunt Launch</a> </li>
   <li> <a href="#day23">Day 23: Tiny video</a> </li>
   <li> <a href="#day22">Day 22: Break</a> </li>
@@ -291,10 +292,67 @@
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day25">Day 25: Summary and Outlook</div>
+<p>Today marks the 25th and last day I of this project. It has been an interesting journey so far. This journal entry will
+be longer than usual. I will cover the following topics</p>
+<ul>
+<li>What I achieved</li>
+<li>Hours spent</li>
+<li>Numbers</li>
+<li>Lessons learned</li>
+<li>Outlook</li>
+</ul>
+<p><strong>Hours spent</strong></p>
+<p>From the beginning I tracked every minute I spent on this project. The idea is to know how much this project costs me and
+what the break-even point is. I will keep tracking the hours and once I have some income, I will post more about that.</p>
+<p>In total, I spend 61h and 38min on the project. The following graphics show the hours spend by week and by the hour (the axis are hidden by intention)</p>
+<div class="flex flex-col w-2/5 justify-center mx-auto gap-4 lg:w-full lg:flex-row lg:gap-0 ">
+<img src="/images/day25-workweek.png" alt="Hour spend per week" class="lg:w-2/5 shadow-md mx-auto border-default border-blue-800 rounded-sm">
+<img src="/images/day25-workhour.png" alt="Which hours do I work?" class="lg:w-2/5 shadow-md mx-auto border-default border-blue-800 rounded-sm">
+</div>
+<p>Most of my work was done after work, and in the third week I spend a weekend to finish almost all features which were
+left. It was not planned, but in the last week I did have not much time to work alongside my job - so I decide to do a
+sprint and spend less time in the last week.</p>
+<p><strong>Numbers</strong></p>
+<p>The following charts shows the number of visitors from Plausible.io:</p>
+<img src="/images/day25-plausible.png" alt="Plausible statistics" class="lg:w-full shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
+<p>I made the mistake <a href="#day9">to include on day9</a>. With 118 unique visitors, I don&rsquo;t have many - but nevertheless more than
+1 (which is me). Considering that many block tracking, 118 not blocked visitors is not bad. I am quite happy with that.</p>
+<p>Another of my goals was to attract more Twitter followers:</p>
+<img src="/images/day25-twitter.png" alt="Twitter statistics" class="lg:w-full shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
+<p>I consider this a success. I gained 6 new followers and 1315 people visited my profile.</p>
+<p><strong>What I achieved</strong></p>
+<p>At the beginning <a href="#levels">I defined</a> some levels on how to evaluate this project. I reached Level 0 and Level 1 ( at least
+5 new Twitter followers and one paying customer). I don&rsquo;t have any paying customers except myself (yes I subscribed and
+pay for my own SaaS, it&rsquo;s called eat your own dog food). Apart from the defined goals, my main success is definitely
+having something online, even this blog entry is a success in my eyes. This project, despite having no actual
+users shows to me how much can be done by just being consistent, and keeps me motivated.</p>
+<p><strong>Lessons Learned</strong></p>
+<p>Here are some lessons I learned. Which are mostly for me to improve for the next time.</p>
+<ul>
+<li>Add Plausible.io or any other user counter from the beginning</li>
+<li>Consistency beats procrastination</li>
+<li>It is possible to develop a SaaS project in ~62h hours for me</li>
+<li>Technical choices are irrelevant to validate your idea</li>
+<li>Writing is hard: I still struggle to convert my thoughts to keystrokes.</li>
+<li>Add proper descriptions from the beginning, it is hard to follow what my goals and intentions are. Spend more time on writing.</li>
+<li>Growing on Twitter is hard.</li>
+<li>Setup a Twitter automation: Until today I post to Twitter every day by hand. This should be automated next time.</li>
+<li>Spend more time on Marketing. Next time, I will dedicate half of the time on creating marketing material)</li>
+<li>Learn to create proper og-tags (with proper twitter-cards)</li>
+</ul>
+<p><strong>Outlook</strong></p>
+<p>This is not going to be my last piece about Flash dictation. I will continue developing it, especially adding more
+features. I will not post any daily update, since I think the frequency is too high (especially on Twitter, I will
+experiment with weekly updates). The goal is still to attract an actual user. Despite having no user, I will keep using
+it to learn French. I have more plans to market it to language learners. This is just the beginning.</p>
+<p>Thank you everyone for supporting me!</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day24">Day 24: ProductHunt Launch</div>
 <p>Many people in my bubble (aka Twitter, and the news I read) see ProductHunt (PH) launch as the holy grail.
 <a href="https://www.producthunt.com/posts/flashdictation">Therefore I waited a while to put it on ProductHunt</a>:</p>
+<p><a href="https://www.producthunt.com/posts/flashdictation">
 <img src="/images/day24-producthunt.png" alt="ProductHunt Launch" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
+</a></p>
 <p>Tbh, choosing the 24th of December to launch the project on PH was not my wisest move. On the other hand, my target
 audience is not on ProductHunt. I just hope it will help to rank the page a bit higher on Google (aka generate some
 backlinks).</p>
@@ -690,7 +748,7 @@ It would be simpler to use the existing transcript to autocorrect and show the m
 <p>The first step is to create a landing page, which will contain more information.</p>
 <h3 class="font-bold text-xl pt-5" id="success">What is a successful SaaS for me?</h3>
 <p>These are the milestones I set to rank the project success in the end:</p>
-<pre>
+<pre id="levels">
 Level 0:
 - Project is online
 - The project is usable by me to practice French
