--- a/til/2020-06-28-multiselect/index.html
+++ b/til/2020-06-28-multiselect/index.html
@@ -235,16 +235,16 @@ A hack to fix this is to add a hidden property with the same name.
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-27-case/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Various</span>
+            <a href="https://kiru.io/til/2017-03-14-du/" class="hover:underline">
+                <span class="text-blue-700 font-bold">What is the difference between `du` and `df` command?</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-12-04-pid/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Waiting for process</span>
+            <a href="https://kiru.io/til/2021-05-25-tagged_templates/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Tagged Templates in JavaScript</span>
             </a>
         </div>
     </div>
