--- a/index.html
+++ b/index.html
@@ -571,22 +571,20 @@ it will take longer than that. I decide to postpone it until all features are co
 <p>Before I changed all pages to be consistent, I re-evaluated the todos, and reorganized them:</p>
 <img src="/images/day15-roadmap.png" alt="Roadmap" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
 <p>This is the result after re-doing the dictation pages:</p>
-<div class="flex flex-col md:flex-row md:gap-3 py-3">
-  <img src="/images/day15-home.png" alt="Makeup Home page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
-  <img src="/images/day15-dictations.png" alt="Makeup dictations page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
-  <img src="/images/day15-edit.png" alt="Makeup edit page page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
+<div class="grid md:grid-cols-2 flex-row w-full gap-4">
+  <img src="/images/day15-dictations.png" alt="Makeup dictations page" class="shadow-md border-default border-blue-800 rounded-lg">
+  <img src="/images/day15-edit.png" alt="Makeup edit page page" class="shadow-md border-default border-blue-800 rounded-lg">
 </div>
 <p>The landing page is not completed yet, as well as the login and the actual dictation page (which you share).
 I did not have much time to finish those today.</p>
+<img src="/images/day15-home.png" alt="Makeup Home page" class="shadow-md border-default border-blue-800 rounded-lg">
 <p>The goal for tomorrow is to make the login and dictation page consistent with the above pages.</p>
 <p>I will update <a href="https://flashdictation.com">flashdictation.com</a> once all of those pages are complete.</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day16">Day 16: Makeup Part 2</div>
 <p>As planned, I finished the redesign of the login and dictation pages:</p>
-<div class="flex flex-col md:flex-row md:gap-3 py-3">
-  <img src="/images/day16-edit.png" alt="edit page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
-  <img src="/images/day16-login.png" alt="login page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
-  <img src="/images/day16-score.png" alt="score" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
-</div>
+<img src="/images/day16-edit.png" alt="edit page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
+<img src="/images/day16-login.png" alt="login page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
+<img src="/images/day16-score.png" alt="score" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
 <p>I did not manage to fix the production environment,
 since there are still some database changes missing. Hopefully should be done by tomorrow.</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day17">Day 17: Production</div>
