--- a/til/2019-12-06-java-comment-code/index.html
+++ b/til/2019-12-06-java-comment-code/index.html
@@ -237,8 +237,8 @@ The above does only work for child processes (stared by the same shell)." />
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-27-case/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Various</span>
+            <a href="https://kiru.io/til/2019-11-05-simulate-network-control/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Simulate network control</span>
             </a>
         </div>
     </div>
@@ -253,8 +253,8 @@ The above does only work for child processes (stared by the same shell)." />
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-07-binding/" class="hover:underline">
-                <span class="text-blue-700 font-bold">What is the difference between 127.0.0.1 and 0.0.0.0?</span>
+            <a href="https://kiru.io/til/2017-03-27-case/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Various</span>
             </a>
         </div>
     </div>
