--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
 </a>
 
 <div class="text-sm font-mono tracking-wide mx-auto text-center pb-3">
-<div class="text-xs">25 / 25 days</div>
+<div class="text-xs">26 / 25 days</div>
 <span id="progressbar" class="text-xs ">
-  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩
+  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩
 </span>
 
 </div>
@@ -301,7 +301,7 @@
  ■ Setup project on GitHub
  ■ Setup initial landing page with a simple description
  ■ Make a simple logo 
- □ Define MVP
+ □ Define MVP (Minimal Viable Product)
  □ Define timeline
  ■ Publish on Twitter
 </pre>
@@ -323,7 +323,7 @@ via Cloudflare Pages. Why? Because it was the fastest way for me to get started.
 19:21:19.202	Failed: build command exited with code: 1
 </code></pre><p>It turned out, without any config, CloudFlare uses node version 12.18.0. To fix this I had to set the following environment variable: <code>NODE_VERSION</code>.
 Once that was done, everything went as expected.</p>
-<p>For the logo, I used <a href="https://hatchful.shopify.com/">Hatchful by Shopify</a>. I did not define the MVP yet, since the idea
+<p>For the logo, I used <a href="https://hatchful.shopify.com/">Hatchful by Shopify</a>. I did not define the MVP (Minimal Viable Product) yet, since the idea
 was not clear to me as well. So I spent most of the time writing down what I expect, and what problem it should solve.</p>
 <p>Go checkout what I produced today:</p>
 <h3 class="text-xl font-bold"><a href="http://flashdictation.com">flashdictation.com</a></h3>
@@ -718,7 +718,7 @@ backlinks).</p>
 <li>Spent more time on writing than coding. Maybe write before you code and then re-view what you wrote?</li>
 </ul>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day25">Day 25: Summary and Outlook</div>
-<p>Today marks the 25th and last day I of this project. It has been an interesting journey so far. This journal entry will
+<p>Today marks the 25th and last day of this project. It has been an interesting journey so far. This journal entry will
 be longer than usual. I will cover the following topics</p>
 <ul>
 <li>What I achieved</li>
@@ -736,7 +736,7 @@ what the break-even point is. I will keep tracking the hours and once I have som
 <img src="/images/day25-workhour.png" alt="Which hours do I work?" class="lg:w-2/5 shadow-md mx-auto border-default border-blue-800 rounded-sm">
 </div>
 <p>Most of my work was done after work, and in the third week I spend a weekend to finish almost all features which were
-left. It was not planned, but in the last week I did have not much time to work alongside my job - so I decide to do a
+left. It was not planned, but in the last week I did not have much time to work alongside my job - so I decide to do a
 sprint and spend less time in the last week.</p>
 <p><strong>Numbers</strong></p>
 <p>The following charts shows the number of visitors from Plausible.io:</p>
@@ -747,7 +747,7 @@ sprint and spend less time in the last week.</p>
 <img src="/images/day25-twitter.png" alt="Twitter statistics" class="lg:w-full shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
 <p>I consider this a success. I gained 6 new followers and 1315 people visited my profile.</p>
 <p><strong>What I achieved</strong></p>
-<p>At the beginning <a href="#levels">I defined</a> some levels on how to evaluate this project. I reached Level 0 and Level 1 ( at least
+<p>At the beginning <a href="#levels">I defined</a> some levels on how to evaluate this project. I reached Level 0 and Level 1 (at least
 5 new Twitter followers and one paying customer). I don&rsquo;t have any paying customers except myself (yes I subscribed and
 pay for my own SaaS, it&rsquo;s called eat your own dog food). Apart from the defined goals, my main success is definitely
 having something online, even this blog entry is a success in my eyes. This project, despite having no actual
