--- a/projects/index.html
+++ b/projects/index.html
@@ -143,20 +143,22 @@
         </div>
     </div>
 </div><div class="bg-blue-100">
-    <div class="kiru-container p-2 text-xl ">
-        <div class="flex flex-col md:flex-row md:flex-1 m-4 gap-4 text-blue-800 justify-center" style="text-underline-offset: 5px">
-            <div class="hover:underline"><a href="/">Home</a></div>
-            <div class="hover:underline"><a href="/til/">TIL</a></div>
-           
-           <div class="hover:underline"><a href="/articles/">Articles</a></div>
-            <div class="hover:underline text-orange-800 font-bold"><a href="/articles/adventofsaas2021/">AdventOfSaaS 2021</a></div>
-            <div class="">
-                <a href="https://twitter.com/kiru_io/"
-                   target="_blank"
-                   class="text-blue-800 font-bold hover:text-blue-600 hover:underline">@kiru_io</a>
-            </div>
-        </div>
+  <div class="kiru-container p-2 text-xl ">
+    <div class="flex justify-between flex-col md:flex-row">
+      <div class="flex flex-col md:flex-row md:flex-1 my-4 gap-4 text-blue-800"
+           style="text-underline-offset: 5px">
+        <div class="hover:underline"><a href="/">Home</a></div>
+        <div class="hover:underline"><a href="/til/">TIL</a></div>
+        
+        <div class="hover:underline"><a href="/articles/">Articles</a></div>
+      </div>
+      <div class="flex flex-col my-4 gap-4 text-blue-800">
+        <a href="https://twitter.com/kiru_io/"
+           target="_blank"
+           class="text-blue-800 font-bold hover:text-blue-600 hover:underline">@kiru_io</a>
+      </div>
     </div>
+  </div>
 </div>
 <div class="kiru-container hidden">
     <div class="my-8">
