--- a/til/2017-03-30-bash-shortcuts/index.html
+++ b/til/2017-03-30-bash-shortcuts/index.html
@@ -268,16 +268,16 @@ data
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-12-04-pid/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Waiting for process</span>
+            <a href="https://kiru.io/til/2019-10-22-fswatch/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Execute python file on change fswatch</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-05-17-pipe-linux/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Shortcut for linux pipe</span>
+            <a href="https://kiru.io/til/2017-03-29-uri/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Is URI case sensitive?</span>
             </a>
         </div>
     </div>
