--- a/til/2018-10-22-bash/index.html
+++ b/til/2018-10-22-bash/index.html
@@ -250,16 +250,16 @@
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2018-10-22-bash/" class="hover:underline">
-                <span class="text-blue-700 font-bold">.bash_profile vs .bashrc</span>
+            <a href="https://kiru.io/til/" class="hover:underline">
+                <span class="text-blue-700 font-bold"></span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-05-17-pipe-linux/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Shortcut for linux pipe</span>
+            <a href="https://kiru.io/til/2019-12-04-pid/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Waiting for process</span>
             </a>
         </div>
     </div>
