--- a/til/2017-03-30-bash-shortcuts/index.html
+++ b/til/2017-03-30-bash-shortcuts/index.html
@@ -268,16 +268,16 @@ data
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2020-06-28-multiselect/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Empty multiselect is not set</span>
+            <a href="https://kiru.io/til/2017-03-27-case/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Various</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-11-05-simulate-network-control/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Simulate network control</span>
+            <a href="https://kiru.io/til/" class="hover:underline">
+                <span class="text-blue-700 font-bold"></span>
             </a>
         </div>
     </div>
