--- a/til/2019-05-17-pipe-linux/index.html
+++ b/til/2019-05-17-pipe-linux/index.html
@@ -247,16 +247,16 @@ This :
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-12-07-new-javascript-features/" class="hover:underline">
-                <span class="text-blue-700 font-bold">JavaScript Function string</span>
+            <a href="https://kiru.io/til/2018-10-22-bash/" class="hover:underline">
+                <span class="text-blue-700 font-bold">.bash_profile vs .bashrc</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-14-du/" class="hover:underline">
-                <span class="text-blue-700 font-bold">What is the difference between `du` and `df` command?</span>
+            <a href="https://kiru.io/til/2017-03-05-sms-length/" class="hover:underline">
+                <span class="text-blue-700 font-bold">What is the max length of an SMS?</span>
             </a>
         </div>
     </div>
