--- a/til/index.html
+++ b/til/index.html
@@ -46,6 +46,12 @@
         color: #005b96;
     }
 
+    .markdown a:hover {
+        color: #093e5e;
+        text-decoration: underline;
+    }
+
+
     .footnotes li {
         margin-left: 0;
         font-size: 15px;
