--- a/index.html
+++ b/index.html
@@ -343,6 +343,13 @@
       </a>
     </div>
   </div>
+
+
+  <div class="p-8 hover:bg-blue-300 hover:rounded-lg hover:shadow-md">
+    <a href="https://photocutter.kiru.io/" class="mx-auto">
+      <img src="/images/logos/photocutter.png" alt="Photocutter logo" class=""/>
+    </a>
+  </div>
 </div>
 
 
