--- a/index.html
+++ b/index.html
@@ -295,34 +295,41 @@
 
 
 <div class="kiru-container p-2 grid sm:grid-cols-2 gap-3">
+
+  <div class="p-8 hover:bg-blue-300 hover:rounded-lg hover:shadow-md flex items-center justify-center">
+    <a href="https://debuggle.net/">
+      <img src="/images/logos/debuggle.png" alt="Debuggle logo" class="rounded-lg"/>
+    </a>
+  </div>
+
   <div class="p-8 hover:bg-blue-300 hover:rounded-lg hover:shadow-md">
     <a href="https://reversle.net/">
-      <img src="/images/reversle.png" alt="Reversle.net logo" class=""/>
+      <img src="/images/reversle.png" alt="Reversle.net logo" class="rounded-lg"/>
     </a>
   </div>
   <div class="p-8 hover:bg-blue-300 hover:rounded-lg hover:shadow-md">
     <a href="https://mathlegame.com/" class="">
-      <img src="/images/mathle.png" alt="Mathle logo" class=""/>
+      <img src="/images/mathle.png" alt="Mathle logo" class="rounded-lg"/>
     </a>
   </div>
 
 
   <div class="p-8 hover:bg-blue-300 hover:rounded-lg hover:shadow-md">
     <a href="https://learnle.net/" class="mx-auto">
-      <img src="/images/learnle.png" alt="Learnle logo" class=""/>
+      <img src="/images/learnle.png" alt="Learnle logo" class="rounded-lg"/>
     </a>
   </div>
 
   <div class="p-8 hover:bg-blue-300 hover:rounded-lg hover:shadow-md">
     <a href="https://wordleart.kiru.io/" class="mx-auto">
-      <img src="/images/logos/wordleart.png" alt="WordleArt Logo" class=""/>
+      <img src="/images/logos/wordleart.png" alt="WordleArt Logo" class="rounded-lg"/>
     </a>
   </div>
 
   <div class="my-auto p-8 hover:bg-blue-300 hover:rounded-lg hover:shadow-md">
     <div class="my-auto">
-      <a href="https://flashdictation.com/">
-        <svg viewBox="25 65 130 40" version="1.1" id="svg_null" class="">
+      <a href="https://flashdictation.com/" class="rounded-lg">
+        <svg viewBox="25 65 130 40" version="1.1" id="svg_null" class="rounded-lg">
           <g id="root" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
             <g id="group" transform="translate(60.000000, 69.000000)">
               <rect id="Rectangle-14" x="0" y="0" width="84" height="22"></rect>
@@ -347,9 +354,10 @@
 
   <div class="p-8 hover:bg-blue-300 hover:rounded-lg hover:shadow-md">
     <a href="https://photocutter.kiru.io/" class="mx-auto">
-      <img src="/images/logos/photocutter.png" alt="Photocutter logo" class=""/>
+      <img src="/images/logos/photocutter.png" alt="Photocutter logo" class="rounded-lg"/>
     </a>
   </div>
+
 </div>
 
 
