--- a/til/entries/2017-03-27-case/index.html
+++ b/til/entries/2017-03-27-case/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <!-- Global Metadata --><meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
@@ -10,31 +9,32 @@
 <link rel="manifest" href="/site.webmanifest">
 
 <!-- Primary Meta Tags -->
-<title></title>
-<meta name="title">
+<title>Various</title>
+<meta name="title" content="Various">
 <meta name="description">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://kiru.io/projects">
-<meta property="og:title">
+<meta property="og:url" content="https://kiru.io/til/entries/2017-03-27-case">
+<meta property="og:title" content="Various">
 <meta property="og:description">
 <meta property="og:image" content="https://kiru.io/TwitterCard.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://kiru.io/projects">
-<meta property="twitter:title">
+<meta property="twitter:url" content="https://kiru.io/til/entries/2017-03-27-case">
+<meta property="twitter:title" content="Various">
 <meta property="twitter:description">
 <meta property="twitter:image" content="https://kiru.io/TwitterCard.png">
 
 
+<link rel="stylesheet" href="/assets/5f66a14e.5ccacf18.css" />
 <link rel="stylesheet" href="/assets/af0be431.cf5f37d0.css" />
-<link rel="stylesheet" href="/assets/5f66a14e.5ccacf18.css" /></head>
+<link rel="stylesheet" href="/assets/b24968be.96df3516.css" /></head>
 
 <body class="w-full">
 <div class="">
-  <div style="background-color: #014b7d">
+  <div style="background-color: #7900a3">
     <div class="flex items-center justify-between max-w-6xl mx-auto py-10 py-6 px-4 sm:px-2">
       <a href="/" class="noSelect">
         <div class="text-white hover:text-[#bc2a61] w-32 ">
@@ -56,15 +56,48 @@
     </div>
   </div>
 
-  <div style="background-color: #c0efff" class="">
+  <div style="background-color: undefined" class="">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 120 1440 170">
-      <path fill="#014b7d" fill-opacity="1" d="M0,160L130.9,224L261.8,64L392.7,128L523.6,192L654.5,160L785.5,224L916.4,256L1047.3,32L1178.2,192L1309.1,288L1440,128L1440,0L1309.1,0L1178.2,0L1047.3,0L916.4,0L785.5,0L654.5,0L523.6,0L392.7,0L261.8,0L130.9,0L0,0Z"></path>
+      <path fill="#7900a3" fill-opacity="1" d="M0,160L130.9,224L261.8,64L392.7,128L523.6,192L654.5,160L785.5,224L916.4,256L1047.3,32L1178.2,192L1309.1,288L1440,128L1440,0L1309.1,0L1178.2,0L1047.3,0L916.4,0L785.5,0L654.5,0L523.6,0L392.7,0L261.8,0L130.9,0L0,0Z"></path>
     </svg>
   </div>
 
   <div class="pt-8">
-    <div class="h-screen bg-[#c0efff]">
-    as
+    <article class="max-w-2xl mx-auto px-2 min-h-screen astro-TFOVXDCZ">
+    <header class=" astro-TFOVXDCZ">
+      <h1 class="title astro-TFOVXDCZ">Various</h1>
+      <time class="astro-TFOVXDCZ">TIL 27.03.2017</time>
+    </header>
+    <main class="prose sm:prose-lg astro-TFOVXDCZ">
+      <ul>
+<li><a href="http://wiki.c2.com/?KebabCase"><code>this-is-called-kebab-case</code></a></li>
+<li><a href="https://en.wikipedia.org/wiki/Snake_case"><code>this_is_called_snake_case</code></a></li>
+</ul>
+    </main>
+  </article><div class=" astro-TFOVXDCZ">
+    <div class="mt-24 astro-TFOVXDCZ">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="astro-TFOVXDCZ">
+        <path fill="#fee2e4" fill-opacity="1" d="M0,128L96,256L192,224L288,256L384,256L480,160L576,256L672,256L768,128L864,64L960,64L1056,32L1152,160L1248,0L1344,160L1440,32L1440,320L1344,320L1248,320L1152,320L1056,320L960,320L864,320L768,320L672,320L576,320L480,320L384,320L288,320L192,320L96,320L0,320Z" class="astro-TFOVXDCZ"></path>
+      </svg>
+    </div>
+    <div class="bg-[#fee2e4] text-black astro-TFOVXDCZ">
+      <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
+        <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
+        <article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2017-03-28-sqllite" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">SQLite Type Affinity</span>
+          </a>
+        </article><article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2021-05-25-tagged_templates" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Tagged Templates in JavaScript</span>
+          </a>
+        </article><article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2017-03-13-java-and-oracle" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Java Enum and extract in SQL</span>
+          </a>
+        </article>
+      </div>
+    </div>
   </div>
   </div>
 
@@ -123,3 +156,5 @@
 </footer>
 </div>
 </body></html>
+
+
