--- a/til/entries/2019-12-06-java-comment-code/index.html
+++ b/til/entries/2019-12-06-java-comment-code/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <!-- Global Metadata --><meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
@@ -10,31 +9,32 @@
 <link rel="manifest" href="/site.webmanifest">
 
 <!-- Primary Meta Tags -->
-<title></title>
-<meta name="title">
+<title>Java code comments</title>
+<meta name="title" content="Java code comments">
 <meta name="description">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://kiru.io/projects">
-<meta property="og:title">
+<meta property="og:url" content="https://kiru.io/til/entries/2019-12-06-java-comment-code">
+<meta property="og:title" content="Java code comments">
 <meta property="og:description">
 <meta property="og:image" content="https://kiru.io/TwitterCard.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://kiru.io/projects">
-<meta property="twitter:title">
+<meta property="twitter:url" content="https://kiru.io/til/entries/2019-12-06-java-comment-code">
+<meta property="twitter:title" content="Java code comments">
 <meta property="twitter:description">
 <meta property="twitter:image" content="https://kiru.io/TwitterCard.png">
 
 
+<link rel="stylesheet" href="/assets/5f66a14e.5ccacf18.css" />
 <link rel="stylesheet" href="/assets/af0be431.cf5f37d0.css" />
-<link rel="stylesheet" href="/assets/5f66a14e.5ccacf18.css" /></head>
+<link rel="stylesheet" href="/assets/b24968be.96df3516.css" /></head>
 
 <body class="w-full">
 <div class="">
-  <div style="background-color: #014b7d">
+  <div style="background-color: #7900a3">
     <div class="flex items-center justify-between max-w-6xl mx-auto py-10 py-6 px-4 sm:px-2">
       <a href="/" class="noSelect">
         <div class="text-white hover:text-[#bc2a61] w-32 ">
@@ -56,15 +56,66 @@
     </div>
   </div>
 
-  <div style="background-color: #c0efff" class="">
+  <div style="background-color: undefined" class="">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 120 1440 170">
-      <path fill="#014b7d" fill-opacity="1" d="M0,160L130.9,224L261.8,64L392.7,128L523.6,192L654.5,160L785.5,224L916.4,256L1047.3,32L1178.2,192L1309.1,288L1440,128L1440,0L1309.1,0L1178.2,0L1047.3,0L916.4,0L785.5,0L654.5,0L523.6,0L392.7,0L261.8,0L130.9,0L0,0Z"></path>
+      <path fill="#7900a3" fill-opacity="1" d="M0,160L130.9,224L261.8,64L392.7,128L523.6,192L654.5,160L785.5,224L916.4,256L1047.3,32L1178.2,192L1309.1,288L1440,128L1440,0L1309.1,0L1178.2,0L1047.3,0L916.4,0L785.5,0L654.5,0L523.6,0L392.7,0L261.8,0L130.9,0L0,0Z"></path>
     </svg>
   </div>
 
   <div class="pt-8">
-    <div class="h-screen bg-[#c0efff]">
-    as
+    <article class="max-w-2xl mx-auto px-2 min-h-screen astro-TFOVXDCZ">
+    <header class=" astro-TFOVXDCZ">
+      <h1 class="title astro-TFOVXDCZ">Java code comments</h1>
+      <time class="astro-TFOVXDCZ">TIL 06.12.2019</time>
+    </header>
+    <main class="prose sm:prose-lg astro-TFOVXDCZ">
+      <p>Nea trick to hide code inside comments by closing enclosing code using unicode:</p>
+<pre class="astro-code" style="background-color:#0d1117;overflow-x:auto"><code><span class="line"></span>
+<span class="line"><span style="color:#FF7B72">public</span><span style="color:#C9D1D9"> </span><span style="color:#FF7B72">class</span><span style="color:#C9D1D9"> </span><span style="color:#FFA657">Dafuq</span><span style="color:#C9D1D9"> {</span></span>
+<span class="line"><span style="color:#8B949E">    /**</span></span>
+<span class="line"><span style="color:#8B949E">     * This does not do what you think it does.</span></span>
+<span class="line"><span style="color:#8B949E">     * &lt;p&gt;</span></span>
+<span class="line"><span style="color:#8B949E">     * You think code is documentation? No! Documentation is code!</span></span>
+<span class="line"><span style="color:#8B949E">      \u002a\u002f</span></span>
+<span class="line"><span style="color:#8B949E">       static {</span></span>
+<span class="line"><span style="color:#8B949E">           out.println(&quot;No&quot;);</span></span>
+<span class="line"><span style="color:#8B949E">           exit(0);</span></span>
+<span class="line"><span style="color:#8B949E">       }</span></span>
+<span class="line"><span style="color:#8B949E">      \u002f\u002a</span></span>
+<span class="line"><span style="color:#8B949E">     */</span></span>
+<span class="line"><span style="color:#C9D1D9">    </span><span style="color:#FF7B72">public</span><span style="color:#C9D1D9"> </span><span style="color:#FF7B72">static</span><span style="color:#C9D1D9"> </span><span style="color:#FF7B72">void</span><span style="color:#C9D1D9"> </span><span style="color:#D2A8FF">main</span><span style="color:#C9D1D9">(</span><span style="color:#FF7B72">String</span><span style="color:#C9D1D9">[] </span><span style="color:#FFA657">args</span><span style="color:#C9D1D9">) {</span></span>
+<span class="line"><span style="color:#C9D1D9">        out.</span><span style="color:#D2A8FF">println</span><span style="color:#C9D1D9">(</span><span style="color:#A5D6FF">&quot;Yes&quot;</span><span style="color:#C9D1D9">);</span></span>
+<span class="line"><span style="color:#C9D1D9">    }</span></span>
+<span class="line"><span style="color:#C9D1D9">}</span></span></code></pre>
+<p>The above code prints “NO”, and taken from <a href="https://twitter.com/lukaseder/status/1202870006914191366">here</a>.</p>
+<p>The above does only work for child processes (stared by the same shell). The hack works for any processes:</p>
+<pre class="astro-code" style="background-color:#0d1117;overflow-x:auto"><code><span class="line"><span style="color:#c9d1d9">$ tail --pid=$pid -f /dev/null</span></span></code></pre>
+<p>Learned from to <a href="https://unix.stackexchange.com/questions/427115/listen-for-exit-of-process-given-pid">StackOverflow answer</a>.</p>
+    </main>
+  </article><div class=" astro-TFOVXDCZ">
+    <div class="mt-24 astro-TFOVXDCZ">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="astro-TFOVXDCZ">
+        <path fill="#fee2e4" fill-opacity="1" d="M0,128L96,256L192,224L288,256L384,256L480,160L576,256L672,256L768,128L864,64L960,64L1056,32L1152,160L1248,0L1344,160L1440,32L1440,320L1344,320L1248,320L1152,320L1056,320L960,320L864,320L768,320L672,320L576,320L480,320L384,320L288,320L192,320L96,320L0,320Z" class="astro-TFOVXDCZ"></path>
+      </svg>
+    </div>
+    <div class="bg-[#fee2e4] text-black astro-TFOVXDCZ">
+      <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
+        <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
+        <article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2019-11-05-simulate network control" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Simulate network control</span>
+          </a>
+        </article><article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2019-12-07-new-javascript-features" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">JavaScript Function string</span>
+          </a>
+        </article><article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2019-05-17-pipe-linux" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Shortcut for linux pipe</span>
+          </a>
+        </article>
+      </div>
+    </div>
   </div>
   </div>
 
@@ -123,3 +174,5 @@
 </footer>
 </div>
 </body></html>
+
+
